Kubernetes/Day-16/permitir-redis-somente-mesmo-ns.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: redis-allow-same-namespace
  namespace: giropops
spec:
  podSelector:
    matchLabels:
      app: redis 
  ingress:
  - from:
    - podSelector: {}
